<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="events"
            type="com.example.roomlivedataapp.screens.jobSheduler.ScheduleClickEvents" />

        <variable
            name="model"
            type="com.example.roomlivedataapp.screens.jobSheduler.JobSchedulerViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".screens.jobSheduler.JobSchedulerActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ReqText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/required_network_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:checkedButton="@={model.radioButton}"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ReqText">


            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/noNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/none" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/anyNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/any" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/wifiNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wifi" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/Requires"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/required_network_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/idleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:layout_marginTop="4dp"
            android:onCheckedChanged="@{(button, bool)-> events.deviceIdle(bool)}"
            android:text="@string/device_idle"
            app:layout_constraintLeft_toLeftOf="@id/Requires"
            app:layout_constraintTop_toBottomOf="@+id/Requires" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/chargingSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/view_margin"
            android:onCheckedChanged="@{(button, bool)-> events.deviceCharging(bool)}"
            android:text="@string/device_charging"
            app:layout_constraintLeft_toRightOf="@+id/idleSwitch"
            app:layout_constraintTop_toBottomOf="@+id/Requires" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/DeadLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/required_network_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idleSwitch" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toTopOf="@+id/seekBar"
            app:layout_constraintLeft_toRightOf="@+id/DeadLine"
            app:layout_constraintTop_toBottomOf="@+id/idleSwitch" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:onProgressChanged="@{events.onSeekValueChange}"
            app:layout_constraintLeft_toLeftOf="@+id/DeadLine"
            app:layout_constraintTop_toBottomOf="@+id/DeadLine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ScheduleJob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/view_margin"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:onClick="@{()->events.onClickScheduleJob()}"
            android:text="@string/schedule_job"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/view_margin"
            android:onClick="@{()->events.onClickCancelJob()}"
            android:text="@string/cancel_jobs"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ScheduleJob" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>