<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        tools:context=".screens.workManager.WorkManager">


        <ImageView
            android:id="@+id/ImageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_select"
            android:onClick="@{()->click.imageClick()}"
            app:layout_constraintBottom_toTopOf="@+id/filters_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />


        <LinearLayout
            android:id="@+id/ButtonsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_blur_group">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_work"
                android:textAllCaps="false"
                android:visibility="@{model.isCancel}" />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"
                android:visibility="@{model.isVisible}" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/GoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:text="Go"
                android:onClick="@{()->click.goClick()}"
                android:visibility="@{model.isGo}"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/see_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/see_file"
                android:textAllCaps="false"
                android:visibility="@{model.isSeeFile}"/>


        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_blur_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radio_blur_lv_1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ButtonsLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filters_title">

            <RadioButton
                android:id="@+id/radio_blur_lv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_lv_1" />


            <RadioButton
                android:id="@+id/radio_blur_lv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_lv_2" />

            <RadioButton
                android:id="@+id/radio_blur_lv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blur_lv_3" />
        </RadioGroup>


        <TextView
            android:id="@+id/filters_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Blur Amount"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/radio_blur_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <variable
            name="click"
            type="com.example.roomlivedataapp.screens.workManager.WorkManagerListeners" />

        <variable
            name="model"
            type="com.example.roomlivedataapp.screens.workManager.WorkManageViewModel" />

    </data>
</layout>